--- a/Case Study 7/JD_draft_NN.ipynb
+++ b/Case Study 7/JD_draft_NN.ipynb
@@ -19,11 +19,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "fkISQTIL5vgF",
-        "outputId": "db238927-0e7c-460e-ba35-c08efce60027",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fkISQTIL5vgF",
+        "outputId": "9ec10b16-3402-4aa6-df3f-ba7a3e2552a3"
       },
       "execution_count": 1,
       "outputs": [
@@ -52,12 +52,12 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "DJIC_lUg5RZu",
-        "outputId": "9b7a79c0-2945-49d1-95ca-76d555d048f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "DJIC_lUg5RZu",
+        "outputId": "a6fc3dbb-b6a0-44cf-ebda-0ce457731f40"
       },
       "outputs": [
         {
@@ -89,7 +89,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-52f66342-1ebe-4e91-9bb0-5437e76f7ea3\">\n",
+              "  <div id=\"df-decb439f-bb0e-4931-a82c-bec2669cec94\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -257,7 +257,7 @@
               "</table>\n",
               "<p>5 rows × 51 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-52f66342-1ebe-4e91-9bb0-5437e76f7ea3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-decb439f-bb0e-4931-a82c-bec2669cec94')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -308,12 +308,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-52f66342-1ebe-4e91-9bb0-5437e76f7ea3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-decb439f-bb0e-4931-a82c-bec2669cec94 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-52f66342-1ebe-4e91-9bb0-5437e76f7ea3');\n",
+              "          const element = document.querySelector('#df-decb439f-bb0e-4931-a82c-bec2669cec94');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -358,11 +358,11 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "Sl1ie61o5RZx",
-        "outputId": "75b189ed-6536-44c7-ee9c-518ea734a8dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Sl1ie61o5RZx",
+        "outputId": "75b189ed-6536-44c7-ee9c-518ea734a8dc"
       },
       "outputs": [
         {
@@ -391,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "HFXb7jAD5RZz"
       },
@@ -408,11 +408,11 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "oPJAWSh25RZ0",
-        "outputId": "6016da83-43d8-45cc-ac45-f9b7ca12ce4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oPJAWSh25RZ0",
+        "outputId": "6016da83-43d8-45cc-ac45-f9b7ca12ce4f"
       },
       "outputs": [
         {
@@ -618,13 +618,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
-        "id": "BuSmLpTg5RZ8",
-        "outputId": "b8794e2b-de26-4575-9aea-d05dfae5ba40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BuSmLpTg5RZ8",
+        "outputId": "dd5cd275-4902-4ef6-96af-a39616bcca84"
       },
       "outputs": [
         {
@@ -649,7 +649,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ],
       "source": [
@@ -662,7 +662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "id": "Ts0BKjOE5RZ9"
       },
@@ -685,11 +685,11 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "wV8TYtuC5RZ9",
-        "outputId": "486aa237-12da-4aa5-911e-0336d74434e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wV8TYtuC5RZ9",
+        "outputId": "486aa237-12da-4aa5-911e-0336d74434e3"
       },
       "outputs": [
         {
@@ -723,11 +723,11 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "id": "oA9k7fnd5RZ-",
-        "outputId": "4815e6c2-fcb0-418f-a8bf-9cc2e8a1d601",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oA9k7fnd5RZ-",
+        "outputId": "4815e6c2-fcb0-418f-a8bf-9cc2e8a1d601"
       },
       "outputs": [
         {
@@ -753,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 9,
       "metadata": {
         "id": "qPkZcrKT5RZ-"
       },
@@ -768,11 +768,11 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "id": "jURxgxVN5RZ-",
-        "outputId": "e768ed0a-0f31-4b5d-e214-bebe28e9ff4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jURxgxVN5RZ-",
+        "outputId": "e768ed0a-0f31-4b5d-e214-bebe28e9ff4d"
       },
       "outputs": [
         {
@@ -797,7 +797,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 10,
       "metadata": {
         "id": "Ud0ABOgC5RZ_"
       },
@@ -809,13 +809,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 11,
       "metadata": {
-        "id": "QooGbAPB5RZ_",
-        "outputId": "d9b50c26-29f3-4339-baf3-ebfe37e358dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QooGbAPB5RZ_",
+        "outputId": "5e2af7ef-e788-4a9c-ba64-f757d73afae5"
       },
       "outputs": [
         {
@@ -831,7 +831,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 11
         }
       ],
       "source": [
@@ -840,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 12,
       "metadata": {
         "id": "EZLuVIhQ5RaA"
       },
@@ -854,11 +854,11 @@
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "bNWGloR85RaA",
-        "outputId": "db807828-5a73-4cba-cfb2-5327ad0c7712",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bNWGloR85RaA",
+        "outputId": "db807828-5a73-4cba-cfb2-5327ad0c7712"
       },
       "outputs": [
         {
@@ -1102,7 +1102,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "source": [
+        "data.dtypes"
+      ],
+      "metadata": {
+        "id": "rlYbc1nmmt_7",
+        "outputId": "6ede226a-2bbd-41b8-8d73-e779b9120585",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x0     float64\n",
+              "x1     float64\n",
+              "x2     float64\n",
+              "x3     float64\n",
+              "x4     float64\n",
+              "x5     float64\n",
+              "x6     float64\n",
+              "x7     float64\n",
+              "x8     float64\n",
+              "x9     float64\n",
+              "x10    float64\n",
+              "x11    float64\n",
+              "x12    float64\n",
+              "x13    float64\n",
+              "x14    float64\n",
+              "x15    float64\n",
+              "x16    float64\n",
+              "x17    float64\n",
+              "x18    float64\n",
+              "x19    float64\n",
+              "x20    float64\n",
+              "x21    float64\n",
+              "x22    float64\n",
+              "x23    float64\n",
+              "x24     object\n",
+              "x25    float64\n",
+              "x26    float64\n",
+              "x27    float64\n",
+              "x28    float64\n",
+              "x29     object\n",
+              "x30     object\n",
+              "x31    float64\n",
+              "x32    float64\n",
+              "x33    float64\n",
+              "x34    float64\n",
+              "x35    float64\n",
+              "x36    float64\n",
+              "x37    float64\n",
+              "x38    float64\n",
+              "x39    float64\n",
+              "x40    float64\n",
+              "x41    float64\n",
+              "x42    float64\n",
+              "x43    float64\n",
+              "x44    float64\n",
+              "x45    float64\n",
+              "x46    float64\n",
+              "x47    float64\n",
+              "x48    float64\n",
+              "x49    float64\n",
+              "y        int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 146
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
         "id": "93UKgeDr5RaD"
       },
@@ -1174,7 +1251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 14,
       "metadata": {
         "id": "FSh6f1f15RaE"
       },
@@ -1553,7 +1630,7 @@
       "metadata": {
         "id": "miFrBahDATEG"
       },
-      "execution_count": 21,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1815,32 +1892,88 @@
     {
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.utils import to_categorical\n",
-        "\n",
-        "y_train_cat = to_categorical(y_train)\n",
-        "y_test_cat = to_categorical(y_test)"
+        "data_dum = pd.get_dummies(data, columns = ['x24', 'x29', 'x30'])"
       ],
       "metadata": {
-        "id": "e029cmDTAEuO"
+        "id": "t52_P3bbmhiF"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(X_train_scaled.shape)\n",
-        "print(y_train_cat.shape)"
+        "y = data_dum['y']\n",
+        "X = data_dum.drop(columns = ['y'])"
       ],
       "metadata": {
-        "id": "UF3vD3IcA03x",
-        "outputId": "02069cb5-14c5-4105-ec54-b1a78d6fdc14",
+        "id": "X7sMw0XLkZQW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=9)"
+      ],
+      "metadata": {
+        "id": "3Cvofv03jv5m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scaler = StandardScaler()\n",
+        "X_train_scale = scaler.fit_transform(X_train)\n",
+        "X_test_scale = scaler.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "p9urcegsn39x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.callbacks import EarlyStopping\n"
+      ],
+      "metadata": {
+        "id": "e029cmDTAEuO"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train = tf.one_hot(y_train, depth=2)\n",
+        "y_test = tf.one_hot(y_test, depth=2)"
+      ],
+      "metadata": {
+        "id": "NDtxrRpPqXaq"
+      },
+      "execution_count": 192,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(X_train_scale.shape)\n",
+        "print(y_train.shape)"
+      ],
+      "metadata": {
+        "id": "pKN0Srs7oXi3",
+        "outputId": "f808162f-dd21-402e-b503-8c6730416c7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "stream",
@@ -1869,78 +2002,76 @@
       "metadata": {
         "id": "Z-5DVh21A8oH"
       },
-      "execution_count": 33,
+      "execution_count": 223,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "from tensorflow.keras.callbacks import EarlyStopping\n",
-        "safety = EarlyStopping(monitor = 'val_precision', patience = 3, mode = 'max')"
+        "safety = EarlyStopping(monitor = 'val_precision_44', patience = 3, mode = 'max')"
       ],
       "metadata": {
         "id": "Z2pghfjqBjSZ"
       },
-      "execution_count": 34,
+      "execution_count": 224,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "my_model.fit(X_train_scaled, y_train_cat, epochs = 1000, batch_size = 50, validation_data=(X_test_scaled, y_test_cat), callbacks = [safety])"
+        "my_model.fit(X_train_scale, y_train, epochs = 1000, batch_size = 50, validation_data=(X_test_scale, y_test), callbacks = [safety])"
       ],
       "metadata": {
-        "id": "L-RvrjMaB3Nd",
-        "outputId": "5b1fd6dc-817e-467b-de33-26547d39036d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "L-RvrjMaB3Nd",
+        "outputId": "643944f1-3c45-42dc-d6e2-cde14069076b"
       },
-      "execution_count": 35,
+      "execution_count": 225,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/1000\n",
-            "2535/2535 [==============================] - 11s 4ms/step - loss: 0.4685 - precision: 0.7719 - val_loss: 0.3162 - val_precision: 0.8642\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.4709 - precision_44: 0.7698 - val_loss: 0.3369 - val_precision_44: 0.8564\n",
             "Epoch 2/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.2716 - precision: 0.8866 - val_loss: 0.2217 - val_precision: 0.9093\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.2724 - precision_44: 0.8852 - val_loss: 0.2256 - val_precision_44: 0.9101\n",
             "Epoch 3/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.1964 - precision: 0.9229 - val_loss: 0.1919 - val_precision: 0.9245\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.1988 - precision_44: 0.9221 - val_loss: 0.1749 - val_precision_44: 0.9316\n",
             "Epoch 4/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.1552 - precision: 0.9426 - val_loss: 0.1500 - val_precision: 0.9458\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.1578 - precision_44: 0.9409 - val_loss: 0.1519 - val_precision_44: 0.9436\n",
             "Epoch 5/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.1308 - precision: 0.9533 - val_loss: 0.1250 - val_precision: 0.9546\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.1331 - precision_44: 0.9518 - val_loss: 0.1400 - val_precision_44: 0.9477\n",
             "Epoch 6/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.1158 - precision: 0.9595 - val_loss: 0.1227 - val_precision: 0.9569\n",
+            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.1180 - precision_44: 0.9586 - val_loss: 0.1235 - val_precision_44: 0.9565\n",
             "Epoch 7/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.1058 - precision: 0.9636 - val_loss: 0.1151 - val_precision: 0.9599\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.1072 - precision_44: 0.9630 - val_loss: 0.1193 - val_precision_44: 0.9585\n",
             "Epoch 8/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.0977 - precision: 0.9673 - val_loss: 0.1124 - val_precision: 0.9605\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.0988 - precision_44: 0.9664 - val_loss: 0.1210 - val_precision_44: 0.9573\n",
             "Epoch 9/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.0905 - precision: 0.9701 - val_loss: 0.1124 - val_precision: 0.9614\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.0926 - precision_44: 0.9687 - val_loss: 0.1104 - val_precision_44: 0.9614\n",
             "Epoch 10/1000\n",
-            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.0852 - precision: 0.9725 - val_loss: 0.1095 - val_precision: 0.9642\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.0861 - precision_44: 0.9720 - val_loss: 0.1023 - val_precision_44: 0.9658\n",
             "Epoch 11/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.0795 - precision: 0.9743 - val_loss: 0.1011 - val_precision: 0.9667\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.0807 - precision_44: 0.9740 - val_loss: 0.1060 - val_precision_44: 0.9643\n",
             "Epoch 12/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.0746 - precision: 0.9764 - val_loss: 0.1097 - val_precision: 0.9641\n",
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.0769 - precision_44: 0.9754 - val_loss: 0.1064 - val_precision_44: 0.9636\n",
             "Epoch 13/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.0709 - precision: 0.9779 - val_loss: 0.1012 - val_precision: 0.9664\n",
-            "Epoch 14/1000\n",
-            "2535/2535 [==============================] - 9s 4ms/step - loss: 0.0672 - precision: 0.9792 - val_loss: 0.1015 - val_precision: 0.9664\n"
+            "2535/2535 [==============================] - 10s 4ms/step - loss: 0.0718 - precision_44: 0.9776 - val_loss: 0.1043 - val_precision_44: 0.9641\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f15787ca190>"
+              "<keras.callbacks.History at 0x7f352aba83d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 225
         }
       ]
     }
