--- a/Case Study 7/RK_draft_noNN.ipynb
+++ b/Case Study 7/RK_draft_noNN.ipynb
@@ -2717,7 +2717,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('msds')",
+   "display_name": "Python 3.11.0 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -2731,12 +2731,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "93e301381d516a13b27f3db99d78adb5f2d7f968f2924c831e884f7d64e94d26"
+    "hash": "bd7ac1133b5b2961f6abb4ae04c224698bbe83fcd0b9af07c55b69a36c9f6c89"
    }
   }
  },
