--- a/Case Study 7/Loss_calc.ipynb
+++ b/Case Study 7/Loss_calc.ipynb
@@ -2,90 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 1,
-=======
-   "execution_count": 13,
->>>>>>> 81095ca84f6a2a69c6baaaa21530782b98dba17f
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>True</th>\n",
-       "      <th>Predicted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   True  Predicted\n",
-       "0     1          1\n",
-       "1     1          0\n",
-       "2     0          0\n",
-       "3     0          1"
-      ]
-     },
-<<<<<<< HEAD
-     "execution_count": 1,
-=======
-     "execution_count": 13,
->>>>>>> 81095ca84f6a2a69c6baaaa21530782b98dba17f
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame({'True':[1,1,0,0], 'Predicted':[1,0,0,1]})\n",
-    "df"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +117,7 @@
        "[31679 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,129 +261,28 @@
   },
   {
    "cell_type": "code",
-=======
->>>>>>> 81095ca84f6a2a69c6baaaa21530782b98dba17f
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>True</th>\n",
-       "      <th>Predicted</th>\n",
-       "      <th>Financial Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-100.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-20.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   True  Predicted  Financial Loss\n",
-       "0     1          1             0.0\n",
-       "1     1          0          -100.0\n",
-       "2     0          0             0.0\n",
-       "3     0          1           -20.0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[df['True'] - df['Predicted'] == 0, 'Financial Loss'] = 0\n",
-    "df.loc[df['True'] - df['Predicted'] == 1, 'Financial Loss'] = -100\n",
-    "df.loc[df['True'] - df['Predicted'] == -1, 'Financial Loss'] = -20\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 6,
-=======
-   "execution_count": 18,
->>>>>>> 81095ca84f6a2a69c6baaaa21530782b98dba17f
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
        "-1.902206509043846"
       ]
      },
      "execution_count": 6,
-=======
-       "-30.0"
-      ]
-     },
-     "execution_count": 18,
->>>>>>> 81095ca84f6a2a69c6baaaa21530782b98dba17f
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-<<<<<<< HEAD
     "final_df['Financial Loss'].mean()"
-=======
-    "df['Financial Loss'].mean()"
->>>>>>> 81095ca84f6a2a69c6baaaa21530782b98dba17f
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
-   "display_name": "Python 3.10.8 64-bit",
-=======
-   "display_name": "Python 3.9.13 ('msds')",
->>>>>>> 81095ca84f6a2a69c6baaaa21530782b98dba17f
+   "display_name": "Python 3.11.0 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -471,20 +296,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.10.8"
-=======
-   "version": "3.9.13"
->>>>>>> 81095ca84f6a2a69c6baaaa21530782b98dba17f
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-<<<<<<< HEAD
-    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
-=======
-    "hash": "93e301381d516a13b27f3db99d78adb5f2d7f968f2924c831e884f7d64e94d26"
->>>>>>> 81095ca84f6a2a69c6baaaa21530782b98dba17f
+    "hash": "bd7ac1133b5b2961f6abb4ae04c224698bbe83fcd0b9af07c55b69a36c9f6c89"
    }
   }
  },
